--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,58 @@ p {
   width: 50%;
 }
 
+.rofl-switcher-container {
+  display: flex;
+  margin-top: 32px;
+  justify-content: space-between;
+}
+
+.rofl-label {
+  line-height: 31px;
+}
+
+input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 51px;
+  height: 31px;
+  background: #787890;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 27px;
+  height: 27px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked+label {
+  background: #7A85E4;
+}
+
+input:checked+label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 31px;
+}
+
 @media screen and (orientation: landscape) {
   .content-wrapper {
     display: flex;
